@@ -13,9 +13,9 @@ import Adhesion from "../hamiltonian/Adhesion.js"
 import VolumeConstraint from "../hamiltonian/VolumeConstraint.js"
 import HardVolumeRangeConstraint from "../hamiltonian/HardVolumeRangeConstraint.js"
 import TestLogger from "../hamiltonian/TestLogger.js"
-
+import ActivityConstraint from "../hamiltonian/ActivityConstraint.js"
 
 export {CPM,CPMChemotaxis,Stats,Canvas,GridManipulator,Grid2D,Grid3D,
-	Adhesion, VolumeConstraint, GridInitializer, HardVolumeRangeConstraint, TestLogger}
+	Adhesion, VolumeConstraint, GridInitializer, HardVolumeRangeConstraint, TestLogger, ActivityConstraint}
 
 
